--- a/client/.gitignore
+++ b/client/.gitignore
@@ -15,8 +15,8 @@
 # /build
 src/*
 public/*
-# build/static/css/*.map
-# build/static/js/*.map
+build/static/css/*.map
+build/static/js/*.map
 
 # misc
 development.env
